[gd_scene load_steps=3 format=3 uid="uid://d0r0auv73k4mw"]

[ext_resource type="Script" uid="uid://ckg6lams8v54u" path="res://scripts/card.gd" id="1_d81rb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d81rb"]
size = Vector2(152, 252)

[node name="Card" type="Node2D"]
script = ExtResource("1_d81rb")

[node name="CardPanel" type="Panel" parent="."]
offset_right = 150.0
offset_bottom = 250.0
pivot_offset = Vector2(75, 125)
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="DetectArea" type="Area2D" parent="CardPanel"]

[node name="DetectCollision" type="CollisionShape2D" parent="CardPanel/DetectArea"]
position = Vector2(75, 125)
shape = SubResource("RectangleShape2D_d81rb")

[connection signal="mouse_entered" from="CardPanel/DetectArea" to="." method="_on_detect_area_mouse_entered"]
[connection signal="mouse_exited" from="CardPanel/DetectArea" to="." method="_on_detect_area_mouse_exited"]
